--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ repositories {
 }
 
 dependencies {
+
+	// https://mvnrepository.com/artifact/org.jsoup/jsoup
+	implementation group: 'org.jsoup', name: 'jsoup', version: '1.16.1'
+
+
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.5' // Chọn phiên bản phù hợp
 // https://mvnrepository.com/artifact/com.nexmo/jwt
 	implementation group: 'com.nexmo', name: 'jwt', version: '1.0.1'
